syntax = "proto3";

package user_settings;

option go_package = ".;pt";


message UserSetting {

    int64 id = 1 [jstype=JS_STRING];
    int64 company_id = 2 [jstype=JS_STRING];
    int64 account_id = 3 [jstype=JS_STRING];
    string menu_path = 4 ;
    string element_id = 5 ;
    string key = 6 ;
    string value = 7 ;


}